--- a/bsp/stm32/fiberfence_v0.2/project.uvprojx
+++ b/bsp/stm32/fiberfence_v0.2/project.uvprojx
@@ -15,7 +15,7 @@
         <TargetCommonOption>
           <Device>STM32F429BITx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.2.11.0</PackID>
+          <PackID>Keil.STM32F4xx_DFP.2.12.0</PackID>
           <PackURL>http://www.keil.com/pack</PackURL>
           <Cpu>IRAM(0x20000000,0x00030000) IRAM2(0x10000000,0x00010000) IROM(0x08000000,0x00200000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -493,12 +493,22 @@
             <File>
               <FileName>update.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\applications\update.c</FilePath>
+              <FilePath>applications\update.c</FilePath>
             </File>
             <File>
-              <FileName>arm_cortexM4lf_math.lib</FileName>
+              <FileName>update_tcp.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>applications\update_tcp.c</FilePath>
+            </File>
+            <File>
+              <FileName>udp_server.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>applications\udp_server.c</FilePath>
+            </File>
+            <File>
+              <FileName>DSP_lib_arm_cortexM4lf_math.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>.\DSP_lib\arm_cortexM4lf_math.lib</FilePath>
+              <FilePath>DSP_lib\arm_cortexM4lf_math.lib</FilePath>
             </File>
           </Files>
         </Group>
