--- a/bsp/stm32/fiberfence_v0.2/.config
+++ b/bsp/stm32/fiberfence_v0.2/.config
@@ -335,12 +335,37 @@ CONFIG_ULOG_USING_FILTER=y
 #
 # IoT - internet of things
 #
-# CONFIG_PKG_USING_PAHOMQTT is not set
-# CONFIG_PKG_USING_WEBCLIENT is not set
+CONFIG_PKG_USING_PAHOMQTT=y
+CONFIG_PAHOMQTT_PIPE_MODE=y
+# CONFIG_PAHOMQTT_UDP_MODE is not set
+# CONFIG_PKG_USING_PAHOMQTT_EXAMPLE is not set
+# CONFIG_PKG_USING_PAHOMQTT_TEST is not set
+# CONFIG_MQTT_USING_TLS is not set
+CONFIG_RT_PKG_MQTT_THREAD_STACK_SIZE=4096
+CONFIG_PKG_PAHOMQTT_SUBSCRIBE_HANDLERS=1
+CONFIG_MQTT_DEBUG=y
+CONFIG_PKG_PAHOMQTT_PATH="/packages/iot/pahomqtt"
+CONFIG_PKG_USING_PAHOMQTT_LATEST=y
+# CONFIG_PKG_USING_PAHOMQTT_V100 is not set
+CONFIG_PKG_PAHOMQTT_VER="latest"
+CONFIG_PKG_USING_WEBCLIENT=y
+CONFIG_PKG_WEBCLIENT_PATH="/packages/iot/webclient"
+# CONFIG_WEBCLIENT_DEBUG is not set
+# CONFIG_WEBCLIENT_USING_SAMPLES is not set
+# CONFIG_WEBCLIENT_USING_TLS is not set
+CONFIG_PKG_USING_WEBCLIENT_V201=y
+# CONFIG_PKG_USING_WEBCLIENT_V200 is not set
+# CONFIG_PKG_USING_WEBCLIENT_V100 is not set
+# CONFIG_PKG_USING_WEBCLIENT_LATEST_VERSION is not set
+CONFIG_PKG_WEBCLIENT_VER="v2.0.1"
 # CONFIG_PKG_USING_WEBNET is not set
 # CONFIG_PKG_USING_MONGOOSE is not set
 # CONFIG_PKG_USING_WEBTERMINAL is not set
-# CONFIG_PKG_USING_CJSON is not set
+CONFIG_PKG_USING_CJSON=y
+CONFIG_PKG_CJSON_PATH="/packages/iot/cJSON"
+CONFIG_PKG_USING_CJSON_V102=y
+# CONFIG_PKG_USING_CJSON_LATEST_VERSION is not set
+CONFIG_PKG_CJSON_VER="v1.0.2"
 # CONFIG_PKG_USING_JSMN is not set
 # CONFIG_PKG_USING_LIBMODBUS is not set
 # CONFIG_PKG_USING_LJSON is not set
@@ -385,7 +410,19 @@ CONFIG_PKG_NETUTILS_VER="latest"
 #
 # IoT Cloud
 #
-# CONFIG_PKG_USING_ONENET is not set
+CONFIG_PKG_USING_ONENET=y
+CONFIG_PKG_ONENET_PATH="/packages/iot/iot_cloud/onenet"
+CONFIG_PKG_USING_ONENET_SAMPLE=y
+CONFIG_ONENET_USING_MQTT=y
+# CONFIG_ONENET_USING_AUTO_REGISTER is not set
+CONFIG_ONENET_INFO_DEVID="528507683"
+CONFIG_ONENET_INFO_AUTH="20190602ttc"
+CONFIG_ONENET_INFO_APIKEY="Jewf42f5yhrD26AGyTKeMGGeBto="
+CONFIG_ONENET_INFO_PROID="247463"
+CONFIG_ONENET_MASTER_APIKEY="qVZ0b8p9XoWjNKmL5zKbvMzlkiA="
+CONFIG_PKG_USING_ONENET_LATEST_VERSION=y
+# CONFIG_PKG_USING_ONENET_V100 is not set
+CONFIG_PKG_ONENET_VER="latest"
 # CONFIG_PKG_USING_GAGENT_CLOUD is not set
 # CONFIG_PKG_USING_ALI_IOTKIT is not set
 # CONFIG_PKG_USING_AZURE is not set
