--- a/bsp/stm32/fiberfence_v0.2/project.uvprojx
+++ b/bsp/stm32/fiberfence_v0.2/project.uvprojx
@@ -332,7 +332,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER, RT_USING_ARM_LIBC, STM32F429xx,ARM_MATH_CM4</Define>
               <Undefine></Undefine>
-              <IncludePath>.;..\..\..\include;applications;.;board;board\CubeMX_Config\Inc;board\ports;..\libraries\HAL_Drivers;..\libraries\HAL_Drivers\config;..\libraries\HAL_Drivers\drv_flash;packages\fal-latest\inc;packages\netutils\ntp;packages\netutils\ping;packages\netutils\telnet;..\..\..\libcpu\arm\common;..\..\..\libcpu\arm\cortex-m4;..\..\..\components\dfs\include;..\..\..\components\dfs\filesystems\devfs;..\..\..\components\dfs\filesystems\elmfat;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\drivers\spi;..\..\..\components\drivers\include;..\..\..\components\drivers\spi\sfud\inc;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\finsh;..\..\..\components\libc\compilers\armlibc;..\..\..\components\libc\compilers\common;..\..\..\components\net\lwip-2.1.0\src;..\..\..\components\net\lwip-2.1.0\src\include;..\..\..\components\net\lwip-2.1.0\src\arch\include;..\..\..\components\net\lwip-2.1.0\src\include\netif;..\..\..\components\net\sal_socket\include;..\..\..\components\net\sal_socket\include\socket;..\..\..\components\net\sal_socket\impl;..\..\..\components\net\sal_socket\include\dfs_net;..\..\..\components\net\sal_socket\include\dfs_net\sys_select;..\..\..\components\net\sal_socket\include\socket\sys_socket;..\..\..\components\utilities\ulog;..\..\..\components\utilities\ymodem;..\libraries\STM32F4xx_HAL\STM32F4xx_HAL_Driver\Inc;..\libraries\STM32F4xx_HAL\CMSIS\Device\ST\STM32F4xx\Include;..\libraries\STM32F4xx_HAL\CMSIS\Include;.\DSP_lib\Include</IncludePath>
+              <IncludePath>.;..\..\..\include;applications;.;board;board\CubeMX_Config\Inc;board\ports;..\libraries\HAL_Drivers;..\libraries\HAL_Drivers\config;..\libraries\HAL_Drivers\drv_flash;packages\cJSON-v1.0.2;packages\fal-latest\inc;packages\netutils-latest\ntp;packages\netutils-latest\ping;packages\netutils-latest\telnet;packages\onenet-latest\inc;packages\pahomqtt-latest\MQTTPacket\src;packages\pahomqtt-latest\MQTTClient-RT;packages\webclient-v2.0.1\inc;..\..\..\libcpu\arm\common;..\..\..\libcpu\arm\cortex-m4;..\..\..\components\dfs\include;..\..\..\components\dfs\filesystems\devfs;..\..\..\components\dfs\filesystems\elmfat;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\drivers\spi;..\..\..\components\drivers\include;..\..\..\components\drivers\spi\sfud\inc;..\..\..\components\drivers\include;..\..\..\components\drivers\include;..\..\..\components\finsh;..\..\..\components\libc\compilers\armlibc;..\..\..\components\libc\compilers\common;..\..\..\components\net\lwip-2.1.0\src;..\..\..\components\net\lwip-2.1.0\src\include;..\..\..\components\net\lwip-2.1.0\src\arch\include;..\..\..\components\net\lwip-2.1.0\src\include\netif;..\..\..\components\net\sal_socket\include;..\..\..\components\net\sal_socket\include\socket;..\..\..\components\net\sal_socket\impl;..\..\..\components\net\sal_socket\include\dfs_net;..\..\..\components\net\sal_socket\include\dfs_net\sys_select;..\..\..\components\net\sal_socket\include\socket\sys_socket;..\..\..\components\utilities\ulog;..\..\..\components\utilities\ymodem;..\libraries\STM32F4xx_HAL\STM32F4xx_HAL_Driver\Inc;..\libraries\STM32F4xx_HAL\CMSIS\Device\ST\STM32F4xx\Include;..\libraries\STM32F4xx_HAL\CMSIS\Include;.\DSP_lib\Include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -491,24 +491,19 @@
               <FilePath>applications\cpuusage.c</FilePath>
             </File>
             <File>
-              <FileName>update.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>applications\update.c</FilePath>
-            </File>
-            <File>
               <FileName>update_tcp.c</FileName>
               <FileType>1</FileType>
               <FilePath>applications\update_tcp.c</FilePath>
             </File>
             <File>
-              <FileName>udp_server.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>applications\udp_server.c</FilePath>
+              <FileName>arm_cortexM4lf_math.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>.\DSP_lib\arm_cortexM4lf_math.lib</FilePath>
             </File>
             <File>
-              <FileName>DSP_lib_arm_cortexM4lf_math.lib</FileName>
-              <FileType>4</FileType>
-              <FilePath>DSP_lib\arm_cortexM4lf_math.lib</FilePath>
+              <FileName>control_server.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\applications\control_server.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -633,6 +628,26 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>cJSON</GroupName>
+          <Files>
+            <File>
+              <FileName>cJSON.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\cJSON-v1.0.2\cJSON.c</FilePath>
+            </File>
+            <File>
+              <FileName>cJSON_port.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\cJSON-v1.0.2\cJSON_port.c</FilePath>
+            </File>
+            <File>
+              <FileName>cJSON_util.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\cJSON-v1.0.2\cJSON_util.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>fal</GroupName>
           <GroupOption>
             <CommonProperty>
@@ -727,17 +742,112 @@
             <File>
               <FileName>ntp.c</FileName>
               <FileType>1</FileType>
-              <FilePath>packages\netutils\ntp\ntp.c</FilePath>
+              <FilePath>packages\netutils-latest\ntp\ntp.c</FilePath>
             </File>
             <File>
               <FileName>ping.c</FileName>
               <FileType>1</FileType>
-              <FilePath>packages\netutils\ping\ping.c</FilePath>
+              <FilePath>packages\netutils-latest\ping\ping.c</FilePath>
             </File>
             <File>
               <FileName>telnet.c</FileName>
               <FileType>1</FileType>
-              <FilePath>packages\netutils\telnet\telnet.c</FilePath>
+              <FilePath>packages\netutils-latest\telnet\telnet.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>onenet</GroupName>
+          <Files>
+            <File>
+              <FileName>onenet_http.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\onenet-latest\src\onenet_http.c</FilePath>
+            </File>
+            <File>
+              <FileName>onenet_sample.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\onenet-latest\samples\onenet_sample.c</FilePath>
+            </File>
+            <File>
+              <FileName>onenet_mqtt.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\onenet-latest\src\onenet_mqtt.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>paho-mqtt</GroupName>
+          <Files>
+            <File>
+              <FileName>MQTTConnectClient.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTPacket\src\MQTTConnectClient.c</FilePath>
+            </File>
+            <File>
+              <FileName>MQTTConnectServer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTPacket\src\MQTTConnectServer.c</FilePath>
+            </File>
+            <File>
+              <FileName>MQTTDeserializePublish.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTPacket\src\MQTTDeserializePublish.c</FilePath>
+            </File>
+            <File>
+              <FileName>MQTTFormat.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTPacket\src\MQTTFormat.c</FilePath>
+            </File>
+            <File>
+              <FileName>MQTTPacket.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTPacket\src\MQTTPacket.c</FilePath>
+            </File>
+            <File>
+              <FileName>MQTTSerializePublish.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTPacket\src\MQTTSerializePublish.c</FilePath>
+            </File>
+            <File>
+              <FileName>MQTTSubscribeClient.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTPacket\src\MQTTSubscribeClient.c</FilePath>
+            </File>
+            <File>
+              <FileName>MQTTSubscribeServer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTPacket\src\MQTTSubscribeServer.c</FilePath>
+            </File>
+            <File>
+              <FileName>MQTTUnsubscribeClient.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTPacket\src\MQTTUnsubscribeClient.c</FilePath>
+            </File>
+            <File>
+              <FileName>MQTTUnsubscribeServer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTPacket\src\MQTTUnsubscribeServer.c</FilePath>
+            </File>
+            <File>
+              <FileName>paho_mqtt_pipe.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\pahomqtt-latest\MQTTClient-RT\paho_mqtt_pipe.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>WebClient</GroupName>
+          <Files>
+            <File>
+              <FileName>webclient.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\webclient-v2.0.1\src\webclient.c</FilePath>
+            </File>
+            <File>
+              <FileName>webclient_file.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>packages\webclient-v2.0.1\src\webclient_file.c</FilePath>
             </File>
           </Files>
         </Group>
